--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nmap (7.01-2) unstable; urgency=medium
+
+  * Remove unneeded build-dependencies; add dh-python
+  * Simplify install
+  * Add Lintian overrides for python-script-but-no-python-dep
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 24 Jan 2016 20:57:21 +0100
+
 nmap (7.01-1) unstable; urgency=medium
 
   * New upstream version
