--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nmap (7.01-3) unstable; urgency=medium
+
+  * Apply patch by Jan Nordholz to ignore unenumerable interfaces
+    (Closes: #821913)
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 23 Apr 2016 14:41:43 +0200
+
 nmap (7.01-2) unstable; urgency=medium
 
   * Remove unneeded build-dependencies; add dh-python
