--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nmap (7.12-1) unstable; urgency=medium
+
+  * New upstream version
+  * Bump Standards-Version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 03 May 2016 07:47:15 +0200
+
 nmap (7.01-3) unstable; urgency=medium
 
   * Apply patch by Jan Nordholz to ignore unenumerable interfaces
