--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nmap (7.31-2) UNRELEASED; urgency=medium
+
+  * Add debian/gbp.conf file
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 11 Nov 2016 14:52:14 +0100
+
 nmap (7.31-1) unstable; urgency=medium
 
   * New upstream version 7.31
