--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nmap (7.31-2) UNRELEASED; urgency=medium
 
+  [ Gianfranco Costamagna ]
   * Add debian/gbp.conf file
+
+  [ Samuel Henrique ]
+  * Add myself as an uploader.
 
  -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 11 Nov 2016 14:52:14 +0100
 
