--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nmap (7.31-2) UNRELEASED; urgency=medium
+nmap (7.31-2) unstable; urgency=medium
 
   [ Gianfranco Costamagna ]
   * Add debian/gbp.conf file
@@ -6,7 +6,7 @@ nmap (7.31-2) UNRELEASED; urgency=medium
   [ Samuel Henrique ]
   * Add myself as an uploader.
 
- -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 11 Nov 2016 14:52:14 +0100
+ -- Samuel Henrique <samueloph@gmail.com>  Sun, 13 Nov 2016 11:36:19 -0200
 
 nmap (7.31-1) unstable; urgency=medium
 
