--- a/debian/changelog
+++ b/debian/changelog
@@ -7,13 +7,16 @@ nmap (7.31-2) unstable; urgency=medium
   * Bump DH level to 10.
   * Add myself as an uploader.
   * debian/control: Remove dh-autoreconf, now a dependency of DH 10.
+  * debian/patches:
+    - 0004-zenmap-desktop.patch: New patch to remove Encoding key and add
+      Keywords entry for zenmap's desktop files, sent upstream.
   * debian/rules:
     - Avoid useless dependencies with "-Wl,--as-needed".
     - Enable all hardening flags with "hardening=+all".
     - Remove "--parallel" parameter, default on DH 10.
   * wrap-and-sort -a.
 
- -- Samuel Henrique <samueloph@gmail.com>  Sun, 13 Nov 2016 11:36:19 -0200
+ -- Samuel Henrique <samueloph@gmail.com>  Wed, 30 Nov 2016 00:04:10 -0200
 
 nmap (7.31-1) unstable; urgency=medium
 
