--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,10 @@ nmap (7.31-2) unstable; urgency=medium
     - Remove "--parallel" parameter, default on DH 10.
   * wrap-and-sort -a.
 
- -- Samuel Henrique <samueloph@gmail.com>  Wed, 30 Nov 2016 00:04:10 -0200
+  [ Hilko Bengen ]
+  * Add manpage links for zenmap links (nmapfe, nmap)
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 30 Nov 2016 20:41:51 +0100
 
 nmap (7.31-1) unstable; urgency=medium
 
