--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-nmap (7.40-1) UNRELEASED; urgency=medium
+nmap (7.40-1) unstable; urgency=medium
 
   * New upstream version 7.40.
+  * debian/patches:
+    - 0001-use-su-to-root.patch: Refresh patch.
+    - 0004-zenmap-desktop.patch: Remove patch, applied upstream.
 
  -- Samuel Henrique <samueloph@gmail.com>  Thu, 22 Dec 2016 00:52:47 -0200
 
