--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nmap (7.40-1) unstable; urgency=medium
   * debian/patches:
     - 0001-use-su-to-root.patch: Refresh patch.
     - 0004-zenmap-desktop.patch: Remove patch, applied upstream.
+  * debian/watch: Bump to v4.
 
  -- Samuel Henrique <samueloph@gmail.com>  Thu, 22 Dec 2016 00:52:47 -0200
 
