--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nmap (7.50-1) unstable; urgency=medium
+
+  * New upstream version 7.50
+
+ -- Samuel Henrique <samueloph@gmail.com>  Sat, 17 Jun 2017 21:04:49 -0300
+
 nmap (7.40-1) unstable; urgency=medium
 
   * New upstream version 7.40.
