--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nmap (7.50-1) unstable; urgency=medium
 
   * New upstream version 7.50.
+  * Bump Standards-Version to 4.0.0.
   * Remove unused lintian overrides.
 
  -- Samuel Henrique <samueloph@gmail.com>  Sat, 17 Jun 2017 21:04:49 -0300
