--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nmap (7.60-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Add STRIP=/bin/true to dh_auto_configure to generate useful dbgsym
+    packages.
+
+ -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
+
 nmap (7.60-1) unstable; urgency=medium
 
   * New upstream version 7.60
