--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nmap (7.60-2) UNRELEASED; urgency=medium
   * Add STRIP=/bin/true to dh_auto_configure to generate useful dbgsym
     packages.
   * Correct syntax error in debian/watch.
+  * Drop --with=autoreconf, this is the default in debhelper compatibility
+    level 10.
 
  -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
 
