--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nmap (7.60-2) UNRELEASED; urgency=medium
     - Windows devel files will be kept until upstream drops them.
   * Use Breaks (instead of Conflicts) for znmap's versioned dependency on nmap
     as this weaker restriction is sufficient.
+  * Put architecture indpendent files into new nmap-common package.
 
  -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
 
