--- a/debian/changelog
+++ b/debian/changelog
@@ -13,10 +13,10 @@ nmap (7.60-2) UNRELEASED; urgency=medium
     - Windows devel files will be kept until upstream drops them.
   * Use Breaks (instead of Conflicts) for znmap's versioned dependency on nmap
     as this weaker restriction is sufficient.
-  * Put architecture indpendent files into new nmap-common package.
+  * Put architecture independent files into new nmap-common package.
   * debian/control:
     - Change priority from extra (deprecated) to optional
-    - Bum Standards-Version to 4.1.0
+    - Bump Standards-Version to 4.1.0
 
  -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
 
