--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-nmap (7.60-2) UNRELEASED; urgency=medium
+nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * Repack source:
+    - Remove non-DFSG complient files.
+    - Remove unused libraries.
   * Add STRIP=/bin/true to dh_auto_configure to generate useful dbgsym
     packages.
   * debian/watch:
