--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
   * debian/control:
     - Change priority from extra (deprecated) to optional
     - Bump Standards-Version to 4.1.0
+  * debian/patches:
+    - Added new patch (0004-library-versions.patch) so nmap reports correct
+      library versions.
 
  -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
 
