--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
 
   * Team upload.
   * Repack source:
-    - Remove non-DFSG complient files.
+    - Remove non-DFSG compliant files.
     - Remove unused libraries.
   * Add STRIP=/bin/true to dh_auto_configure to generate useful dbgsym
     packages.
@@ -18,8 +18,8 @@ nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
     as this weaker restriction is sufficient.
   * Put architecture independent files into new nmap-common package.
   * debian/control:
-    - Change priority from extra (deprecated) to optional
-    - Bump Standards-Version to 4.1.0
+    - Change priority from extra (deprecated) to optional.
+    - Bump Standards-Version to 4.1.0.
   * debian/patches:
     - Added new patch (0004-library-versions.patch) so nmap reports correct
       library versions.
