--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,8 @@ nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
       library versions.
     - Add new patch (0005-autotools.patch) to fix autotools problems and
       allow refreshing all autotools generated files with `autoreconf -fi`.
-  * Add debian/autoreconf.sh script which performs the autotools update in all
-    required folders.  Update debian/rules so dh-autoreconf calls that script.
+  * Update the dh-autoreconf call in debian/rules so all autotools geneated
+    files used during the build are refreshed.
   * Migrate debian/copyright to machine readable DEP-5 format.
     - License for debian/* files is still under discussion.  Do not upload the
       package until that is resolved (and this notice is removed).
