--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
+nmap (7.60+dfsg1-1) unstable; urgency=low
 
   * Team upload.
   * Repack source:
@@ -39,7 +39,7 @@ nmap (7.60+dfsg1-1) UNRELEASED; urgency=medium
       in the build are refreshed.
   * Migrate debian/copyright to machine readable DEP-5 format.
 
- -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200
+ -- Lukas Schwaighofer <lukas@schwaighofer.name>  Fri, 15 Sep 2017 22:51:59 +0200
 
 nmap (7.60-1) unstable; urgency=medium
 
