--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-nmap (7.60+dfsg1-2) UNRELEASED; urgency=medium
+nmap (7.60+dfsg1-2) unstable; urgency=low
 
   * Team upload.
   * Add new patch (0006-move-manual-defines.patch) which moves manually added
     defines from config.h.in (where they are overwritten by dh-autoreconf) to
     a proper location.  Fixes FTBFS on kfreebsd-any architectures.
 
- -- Lukas Schwaighofer <lukas@schwaighofer.name>  Mon, 18 Sep 2017 20:07:45 +0200
+ -- Lukas Schwaighofer <lukas@schwaighofer.name>  Mon, 18 Sep 2017 23:29:18 +0200
 
 nmap (7.60+dfsg1-1) unstable; urgency=low
 
