--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nmap (7.60+dfsg3-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Leave embedded copy of libssh2 in the source package to ease packaging for
+    Ubuntu (which requires the embedded copy).
+
+ -- Lukas Schwaighofer <lukas@schwaighofer.name>  Tue, 17 Oct 2017 22:18:52 +0200
+
 nmap (7.60+dfsg2-1) unstable; urgency=medium
 
   * Repack source: Remove *.class files
