--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,29 @@
-nmap (7.60+dfsg3-1) UNRELEASED; urgency=medium
+nmap (7.70+dfsg1-1) unstable; urgency=medium
 
   * Team upload.
+
+  [ Lukas Schwaighofer ]
   * Leave embedded copy of libssh2 in the source package to ease packaging for
     Ubuntu (which requires the embedded copy).
     - Update debian/copyright with the libssh2 copyright details.
   * Update debian/rules to use the included libssh2 copy when builing for
     Ubuntu and its derivates.
 
- -- Lukas Schwaighofer <lukas@schwaighofer.name>  Tue, 17 Oct 2017 22:18:52 +0200
+  [ Samuel Henrique ]
+  * d/[control|watch]: update upstream homepage to https
+
+  [ Raphaël Hertzog ]
+  * Update team maintainer address to Debian Security Tools
+    <team+pkg-security@tracker.debian.org>
+  * Update Vcs-Git and Vcs-Browser for the move to salsa.debian.org
+
+  [ Hilko Bengen ]
+  * New upstream version 7.70+dfsg1
+  * Bump Standards-Version
+  * nmap: Suggest ndiff, instead of recommending it (Closes: #885871)
+  * Update patches
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 27 Mar 2018 21:48:37 +0200
 
 nmap (7.60+dfsg2-1) unstable; urgency=medium
 
