--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nmap (7.70+dfsg1-6+deb10u1) buster; urgency=medium
+
+  * d/p/ncat-ssl-key-default-size.patch: Backport patch to fix openssl
+    incompatibility (closes: #940284)
+
+ -- Samuel Henrique <samueloph@debian.org>  Fri, 03 Jul 2020 21:51:31 +0100
+
 nmap (7.70+dfsg1-6) unstable; urgency=medium
 
   * Team upload
